syntax = "proto3";

import "google/protobuf/timestamp.proto";

option csharp_namespace = "LantanaGroup.Link.Notification.Protos";

package LantanaGroup.Link.Notification;

service NotificationService {
	//retrieve a facilities notification configuration
	rpc GetFacilityConfiguration(FacilityConfigurationMessage) returns (FacilityConfigurationReply);
}

message FacilityConfigurationMessage {
	string facilityId = 1;
}

message FacilityConfigurationReply {
	string id = 1;
	string facilityId = 2;
	repeated string emailAddresses = 3;
	repeated EnabledNotificationMessage enabledNotifications = 4;
	repeated FacilityChannelMessage channels = 5;
}

message EnabledNotificationMessage {
	string notificationType = 1;
	repeated string recipients = 2;
}

message FacilityChannelMessage {
	string name = 1;
	bool enabled = 2;
}
